fixed-extra-scrollbar-issue-#40

--- a/src/components/MainContentWindow/MainContentWindow.css
+++ b/src/components/MainContentWindow/MainContentWindow.css
@@ -1,5 +1,4 @@
-.Meme-container{
-    height: 85vh;
-    width : 70%;
+.Meme-container {
+    height: auto;
+    width: 70%;
 }
-
